--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
-
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.624467561758!2d-73.97114448533763!3d40.66020774872074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b1087680443%3A0x178bf7c600df7a98!2sProspect%20Park!5e0!3m2!1sfr!2sus!4v1650567226975!5m2!1sfr!2sus" width="100%" height="400px"  frameborder="1" ></iframe>
     <!-- Create an iframe tag-->
 
   </body>
